Bug #58136
usage trim has infinite loop problem
% Done:
0%
Source:
Tags:
rgw radosgw-admin
Backport:
all versions need backport
Regression:
No
Severity:
3 - minor
Reviewed:
Description
try usage trim only specifying "--bucket", when first MAX_USAGE_TRIM_ENTRIES entries in cls method RGW_USER_USAGE_LOG_TRIM is null, infinite loop will occur.
History
#2 Updated by Casey Bodley 2 months ago
- Status changed from New to Fix Under Review
- Assignee set to Casey Bodley
- Pull request ID set to 49168