rgw : fix usage trim infinite loop bug

Fixes: https://tracker.ceph.com/issues/58136
Signed-off-by: caolei <cao.leilc@inspur.com>